# Xonotic-Ubuntu-Touch-App

./: .gitignore  CMakeLists.txt  README.md  clickable.json  manifest.json.in  setup-clickable.sh  xonotic.desktop.in
.github/workflows/: build-and-publish.yml
data/: README.md
docs/: ARCHITECTURE.md  CONTROLS.md  ENGINE.md  MAINTAINING.md  RELEASES.md  SCREEN.md  SETUP.md  SOURCES.md  TESTING.md
engine/: .gitignore
engine/d0_blind_id/: d0_blind_id.pc.in
engine/darkplaces/: CONTRIBUTING.md  CREDITS.md  clvm_cmds.c  prvm_edict.c  svvm_cmds.c  vid.h  vid_sdl.c  vid_shared.c
engine/data/: .gitignore  xonotic.cfg
flatpak/: io.github.dixonSolutions.XonoticTouch.desktop  io.github.dixonSolutions.XonoticTouch.metainfo.xml  io.github.dixonSolutions.XonoticTouch.yml
packaging/: start.sh
patches/: README.md
qml/: Main.qml
scripts/: build-engine.sh  build.sh  clean-local-artifacts.sh  clean-podman-after-clickable.sh  clickable.sh  compile-and-install-deps.sh  compile-for-click.sh  ensure-build-deps.sh  fetch-assets-runtime.sh  fetch-sources.sh  init-xonotic-fork.sh  install-clickable.sh  install-flatpak.sh  install.sh  prepare-engine-for-git.sh  run-clickable.sh  run-local-no-clickable.sh  stage-click-utils.sh  stage-flatpak.sh  stage-slim-data.sh  sync-bundle-data.sh  sync-upstream-fork.sh  test-screen-calc.sh  test-touch-profiles.sh
scripts/lib/: asset-fetch.sh  xonotic-shlib.sh
touch/: screen-calc.sh  startup.cfg  xonotic.cfg
touch/profiles/: balanced.cfg  battery.cfg  casual.cfg  competitive.cfg  left.cfg  minimal.cfg  quality.cfg  standard.cfg
(+83 files in other folders)
